objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Acct_Activity_Projects_Created__c</fullName>
        <label>Acct_Activity_Projects_Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Activity_Report_File__c</fullName>
        <label>Acct_Activity_Report_File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Activity_Total_Logins__c</fullName>
        <label>Acct_Activity_Total_Logins</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Activity_Total_Users__c</fullName>
        <label>Acct_Activity_Total_Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Activity_Value_Projects__c</fullName>
        <label>Acct_Activity_Value_Projects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Projects_over_500k__c</fullName>
        <description>Marketing form value for how many annual projects over 500k</description>
        <label>Annual Projects over 500k</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Picklist__c</fullName>
        <inlineHelpText>Select the tier that best represents the company&apos;s annual revenue</inlineHelpText>
        <label>Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$2.5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2.5M-$4.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5M-$9.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10M+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Annual Revenue collected from Marketing forms</description>
        <label>Annual Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetURL__c</fullName>
        <description>Marketo integration field the platform can attach informational URLs to, for example a link to an estimate produced from a tool.</description>
        <label>AssetURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Project_Size__c</fullName>
        <label>Average Project $ Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brazos_acct_deleted__c</fullName>
        <description>This is a date/time the Brazos Account was deleted.  Should not be modified by a SFDC user.</description>
        <inlineHelpText>This is a date/time the Brazos Account was deleted.  Should not be modified by a SFDC user.</inlineHelpText>
        <label>Brazos_acct_deleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brazos_id__c</fullName>
        <description>Unique key.  Enables web users to change email addresses while still maintaining the same record.</description>
        <label>Brazos_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazos_source_svr__c</fullName>
        <description>Indicates the server instance of the record - used to indicate Dev/Test/Prod.</description>
        <label>Brazos_source_svr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Need__c</fullName>
        <label>Business Need</label>
        <picklist>
            <picklistValues>
                <fullName>Measurement and Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Project Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standardized Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automating Internal Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposals</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Technology__c</fullName>
        <label>Business Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Envelope</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Consultant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design / Build EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor/Manufacture/Vendor/Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Energy/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management/Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Industrial/Office Bldg/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/State/Gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services/Lending/Broker</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Buy_Side_Project__c</fullName>
        <description>Track buy side project answer from marketing forms</description>
        <label>Buy Side Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select indicator if the lead is a buy-side lead</inlineHelpText>
        <label>Buy Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Lead_Type__c</fullName>
        <label>Channel Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>AD Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG&amp;E Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Headquarter_State__c</fullName>
        <label>Company Headquarter State</label>
        <picklist>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name_Casual__c</fullName>
        <description>This is the company name used for mail merges (instead of the formal company name).</description>
        <label>Company Name (Casual)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Possessive__c</fullName>
        <label>Company Possessive  (VC email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,001+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Solution__c</fullName>
        <description>This is how the prospect is currently solving the problem that we can solve.</description>
        <inlineHelpText>How is the prospect currently solving the problem?</inlineHelpText>
        <label>Current Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Drip_Campaign__c</fullName>
        <description>Indicates if the registered user is on a drip campaign and which one.</description>
        <label>Customer Engagement Drip Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Newly Registered Drip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Stage__c</fullName>
        <description>Indication of which customer engagement stage this user is in.  As of now there will be 3 phases.</description>
        <label>Customer Engagement Stage</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Registered User, No Consumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Consumption, No Projects / Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Has Projects / Sharing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Type__c</fullName>
        <label>Customer Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>TR=Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT=Long Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customized_Sentence__c</fullName>
        <label>Customized Sentence (VC email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if lead asked not to be called again by Noesis and is not an existing customer. For regulatory requirements, Noesis is required to identify these requests and scrub them from calling lists</inlineHelpText>
        <label>Do Not Call (DNC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAP_Stage__c</fullName>
        <label>EAP Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Requested Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo and Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Setup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECM_Type__c</fullName>
        <inlineHelpText>Select Business Channel Type</inlineHelpText>
        <label>ECM Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling/Heating/Refrigeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Automation/Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Supply/Co-Generation/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metering/Data Logger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Retrofit (Multi ECM Types)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Effort_Type__c</fullName>
        <label>Effort Type</label>
        <picklist>
            <picklistValues>
                <fullName>GGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Savings Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Up Savings Estimator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LightFair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Channel and Endorsement Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 TLI 3&amp;4 Initiative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Energy_Star__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Energy Star?</description>
        <label>Energy Star</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Proposals_Per_Year__c</fullName>
        <label>Estimated # Project Proposals Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Example_Investment__c</fullName>
        <label>Example Investment (VC email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Description of lead and opportunity go here.</description>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name_Casual__c</fullName>
        <description>First name - casual - that used for mail merges.</description>
        <label>First Name (Casual)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GACampaignLatest__c</fullName>
        <description>Latest Google Analytics Campaign</description>
        <label>GACampaignLatest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAMediumLatest__c</fullName>
        <description>Latest Google Analytics Medium</description>
        <label>GAMediumLatest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GASourceLatest__c</fullName>
        <description>Capture the latest Google Analytics Source</description>
        <label>GASourceLatest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Groups_and_Certifications__c</fullName>
        <label>Industry Groups and Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Platform_Password__c</fullName>
        <label>Initial Platform Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Location__c</fullName>
        <inlineHelpText>Select the respective remarket international location of the lead</inlineHelpText>
        <label>International Location</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia, New Zealand, Singapore, Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <label>Investment (VC email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Opt_In__c</fullName>
        <label>Landing Page Opt In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Day__c</fullName>
        <description>Capture most recent day this lead logged in</description>
        <label>Last Login Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_SQL_Date__c</fullName>
        <description>The most recent date when this lead was flipped to &apos;New Lead&apos; and passed to the Sales team</description>
        <label>Latest SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign__c</fullName>
        <label>Lead Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Medium__c</fullName>
        <description>Channel or method of first putting this lead in the funnel</description>
        <label>Lead Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Referring_Site__c</fullName>
        <label>Lead Referring Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Form_Opt_In__c</fullName>
        <description>catch a yes or no response to a conditional question on a marketing form</description>
        <label>Marketing Form Opt In</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Form_Product_Selection__c</fullName>
        <description>Capture product interest on persona pages</description>
        <label>Marketing Form Product Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box for all new &apos;Warm&apos; leads that came in from conversations at Tradeshows, requests for information from the web or survey responders from Webinars</inlineHelpText>
        <label>Marketing Lead Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Q_C__c</fullName>
        <label>Marketing Q/C</label>
        <picklist>
            <picklistValues>
                <fullName>Dave Jaros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacey Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebecca Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Carter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taina Palombo-Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Campaign_2__c</fullName>
        <label>Most Recent Campaign 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Noesis_User_GUID__c</fullName>
        <description>GUID for this user within the Noesis Platform</description>
        <label>Noesis User GUID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Consultants__c</fullName>
        <label>Number of Consultants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Facilities__c</fullName>
        <description>Number of facilities</description>
        <inlineHelpText>Number of facilities this lead is responsible for</inlineHelpText>
        <label>Number of Facilities</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Date__c</fullName>
        <label>Opt In Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_by_Engagement_Date__c</fullName>
        <description>The date a lead opted in by engagement.</description>
        <label>Opt In by Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opt_In_by_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In by Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Company Account to which this company/lead is associated</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Type__c</fullName>
        <label>Primary Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>MF=Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA=Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC=Design Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT=Utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Technology_Type__c</fullName>
        <label>Primary Technology Type</label>
        <picklist>
            <picklistValues>
                <fullName>CO=Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR=Deep Retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV=HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI=Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O=Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO=Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Lead_Type__c</fullName>
        <description>Identifies the Type for the lead.  Note that a lead&apos;s type can change if he engages Noesis for a different reason.</description>
        <label>Product_Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pro (Front Office+M&amp;V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Front Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro M&amp;V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Financing Services-Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Financing Services-Advantage PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC Subscriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Customer Engagement Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Finance Assessment (PFA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Limitation_Reasons__c</fullName>
        <inlineHelpText>Select the respective product/technology limitations preventing Noesis from moving forward with services discussions</inlineHelpText>
        <label>Product_Service Limitation Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Currency/Denomination other than $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non English Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Services Request outside of USA &amp; Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Financing Outside of USA/Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Annual_Savings__c</fullName>
        <label>Project Annual Savings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Costs__c</fullName>
        <label>Project Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Equipment_Life__c</fullName>
        <label>Project Equipment Life</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Financing_Discussed__c</fullName>
        <label>Project Financing Discussed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Proposed_Decision_Maker__c</fullName>
        <label>Project Proposed Decision Maker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>